--- a/src/pages/FeedsTest.module.scss
+++ b/src/pages/FeedsTest.module.scss
@@ -74,6 +74,8 @@
     line-height: 20px;
     border-radius: 12px;
     padding: 12px 16px;
+    min-height: 33vh;
+    max-height: 66vh;
   }
 }
 
